# place-recognition-backend

./: .dockerignore  .gitignore  .gitmodules  docker-compose-miner.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: miner.yml
.run/: Apply Migrations.run.xml  Compose.run.xml  Make Migrations.run.xml
alembic/: env.py
alembic/scripts/: apply_migrations.sh  make_migrations.sh
alembic/versions/: 162ae61c3b77_link.py  727e101e0dc4_ttt.py  ed5d6691ad56_init.py
configs/clickhouse/: users.xml
configs/miner/: spec.yml  user-data.yml
configs/postgres/: load-extensions.sh
configs/prometheus/: prometheus.yml
db/: clickhouse.Dockerfile  clickhouse.py  postgres.Dockerfile  postgres.py  qdrant.py
importers/buildings/rosreestr/: main.py
importers/metro/: building_to_metro.py  main.py
libs/: coordinates.py  equirec_to_perspec.py  features.py  filter.py  geo.py  geometry.py  predictors.py  readers.py  s3.py  utils.py
logging/: grafana.Dockerfile
migrations/clickhouse/: changelog.xml  liquibase.properties
migrations/clickhouse/sql/: 001-create-logs-db.sql  002-create-request-table.sql  003-create-recognition-table.sql
miner/: Dockerfile  common.py  create_task.py  docker-compose.yml  google.py  main.py  refreshBothContainer.sh
miner/manager/: Dockerfile  db.py  google_pano.py  ids.txt  ids2.txt  main.py  manager.sqlite  models.py  refreshHub.sh  requirements.txt  s3.py  uploader.py
miner/worker/: Dockerfile  common_pano.py  google_pano.py  main.py  refreshHub.sh  requirements.txt  s3.py  test.py  yandex_crawler.py  yandex_pano.py
ml_models/mixvpr/: convert.py  interface.py  model.py
ml_models/mixvpr/dataloaders/: GSVCitiesDataloader.py
ml_models/mixvpr/models/: helper.py
ml_models/mixvpr/models/aggregators/: __init__.py  convap.py  cosplace.py  gem.py  mixvpr.py
ml_models/mixvpr/utils/: validation.py
models/: __init__.py  base.py  common.py  geo.py  image.py  language.py  link.py  logs.py  pano.py  release.py
network/: config.py
releasers/: main.py
resources/areas/: main.py
resources/extra/: adjectives.py  philosophers.py
resources/metro/: data.json  update.py
server/: app.py  fastapi.Dockerfile  logger.py  sender.py  test.py
services/: common.py  geo.py  language.py  logs.py  logs_clickhouse.py  pano.py  release.py
templates/: debug.html
tools/: descriptor.py
