[tool.poetry]
name = "place-recognition"
version = "0.1.0"
readme = "README.md"
description = "This will be epic"
authors = ["Kabakov Ivan <hexwhyzet@gmail.com>"]
repository = "https://github.com/hexwhyzet/place-recognition"

[tool.poetry.dependencies]
python = "3.9.18"
fastapi = "^0.109.0"
SQLAlchemy = "^1.4.41"
loguru = "^0.7.2"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
psycopg2-binary = "^2.9.7"
geoalchemy2 = "^0.14.1"
shapely = "^2.0.1"
pillow = "^10.0.1"
requests = "^2.31.0"
pyproj = "^3.6.1"
tqdm = "^4.66.1"
qdrant-client = "^1.6.3"
sqlmodel = "^0.0.11"
jinja2 = "^3.1.3"

[tool.poetry.group.miner.dependencies]
boto3 = "^1.28.51"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.28.51"
alembic = "^1.12.0"
geopandas = "^0.14.0"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.0"
pytorch-lightning = "^2.1.0"
coremltools = "^7.1"
pytorch-metric-learning = "^2.3.0"
faiss-cpu = "^1.7.4"
prettytable = "^3.9.0"
timm = "^0.9.8"
ray = "^2.7.1"
torch = {version = "^2.1.2+cu121", source = "pytorch-gpu-src"}
torchvision = {version = "^0.16.2+cu121", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.1.2+cu121", source = "pytorch-gpu-src"}


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"